--- a/Decorator/CMakeLists.txt
+++ b/Decorator/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.0.0)
 
 project(Decorator VERSION 0.1 LANGUAGES CXX)
 
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 
